Lang and Recipe Removal

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1461,5 +1461,10 @@ multiblocktweaker.machine.enzymatic_hydrolisis_tank.name=Enzymatic Hydrolisis Ta
 multiblocktweaker.machine.phase_separator.name=Phase Separator
 multiblocktweaker.machine.rare_gas_stripping_column.name=Rare Gas Stripping Column
 recipemap.rare_gas_stripping_column.name=Rare Gas Stripping
-multiblocktweaker.machine.cryogenic_distillation_plant.name=Cryogenic Disitllation Plant
+multiblocktweaker.machine.cryogenic_distillation_plant.name=Cryogenic Distillation Plant
 multiblocktweaker.machine.heat_exchanger.name=Heat Exchanger
+recipemap.cryogenic_distillation_plant.name=Cryogenic Distillation Plant
+recipemap.rare_gas_stripping_column.name=Rare Gas Stripping Column
+recipemap.condensation_unit.name=Condensation Unit
+recipemap.induction_smelter.name=Induction Smelter
+devtech.machine.induction_smelter.name=Induction Smelter
