More Lang, as always

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1468,3 +1468,10 @@ recipemap.rare_gas_stripping_column.name=Rare Gas Stripping Column
 recipemap.condensation_unit.name=Condensation Unit
 recipemap.induction_smelter.name=Induction Smelter
 devtech.machine.induction_smelter.name=Induction Smelter
+recipemap.phase_separator.name=Phase Separator
+recipemap.matter_dissolver.name=Matter Dissolver
+recipemap.naquadah_fuel_refinery.name=Naquadah Fuel Refinery
+recipemap.quantum_computer.name=Quantum Computer
+recipemap.black_hole_compressor.name=Black Hole Compressor
+recipemap.cosmic_pneumatic_chamber.name=Cosmic Pneumatic Chamber
+recipemap.gravity_separator.name=Gravity Separation
