--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -96,19 +96,6 @@ fluid.primalquarkdegeneratematterplasma=Primal Quark Degenerate Matter Plasma
 fluid.highlycomplicatedcosmicrubber=Highly Complicated Cosmic Rubber
 item.contenttweaker.crystaltinebaseingot.name=Crystaltine Base Ingot
 fluid.moltenemerald=Molten Emerald
-fluid.draconiumenrichedamonia=Draconium Enriched Ammonia
-fluid.steamcrackeddraconiumenrichedamonia=Steam Cracked Draconium Enriched Ammonia
-fluid.draconiumcontainingmixture=Draconium Containing Mixture
-fluid.enhanceddraconiummixture=Enhanced Draconium Mixture
-fluid.draconiumsaltmixture=Draconium Salt Mixture
-fluid.aircompresseddsm=Air Compressed DSM
-fluid.draconiumdioxide=Draconium Dioxide
-fluid.draconiumhexachloride=Draconium Hexachloride
-fluid.draconiumhexafluoride=Draconium Hexafluoride
-fluid.draconiumnitradesolution=Draconium Nitrate Solution
-fluid.depleteddraconiumnitradesolution=Depleted Draconium Nitrate Solution
-fluid.draconiumrichsolution=Draconium Rich Solution
-fluid.obisdianinfuseddraconiummixture=Obsidian Infused Draconium Mixture
 tile.contenttweaker.refabricateddraconiumore.name=Refabricated Draconium Ore
 item.contenttweaker.instablematter.name= Unstable Matter
 item.contenttweaker.stablematter.name= Stable Matter
@@ -1475,3 +1462,10 @@ recipemap.quantum_computer.name=Quantum Computer
 recipemap.black_hole_compressor.name=Black Hole Compressor
 recipemap.cosmic_pneumatic_chamber.name=Cosmic Pneumatic Chamber
 recipemap.gravity_separator.name=Gravity Separation
+multiblocktweaker.machine.condensation_unit.name=Condensation Unit
+multiblocktweaker.machine.miracle_top.name=Miracle Top
+recipemap.rotary_evaporator.name=Rotary Evaporation
+fluid.draconiumslurry=Draconium Slurry
+fluid.draconiumimpureslurry=Impure Draconium Slurry
+fluid.purified_draconium_slurry=Purified Draconium Slurry
+fluid.draconiumsolution=Draconium Solution
