--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1480,7 +1480,7 @@ metaitem.destabilized_clathrate.name=Destabilized Clathrate
 metaitem.energized_clathrate.name=Energized Clathrate
 fluid.living_mutation_medium=Living Mutation Medium
 fluid.mb_water=Water
-
+recipemap.miracle_top.name=Miracle Top
 
 
 
