--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -81,6 +81,7 @@ material.modularium=Modularium
 material.kaptonk=Kapton-K
 material.awakened_draconium=Awakened Draconium
 material.chaos=Chaos
+material.highly_strained_polyethylene=Highly Strained Polyethylene
 
 
 
