New Types of Steel and Steel casing used for early game

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1496,3 +1496,10 @@ tile.contenttweaker.thaumic_casing.name=Thaumic Casing
 tile.contenttweaker.steel_plated_workbench.name=Steel Plated Workbench
 multiblocktweaker.machine.fischer_tropsch_reactor.name=Fischer Tropsch Reactor
 recipemap.fischer_tropsch_reactor.name=Fischer-Tropsch Reaction
+fluid.paraffin_wax=Paraffin Wax
+fluid.silane=Silane
+multiblocktweaker.machine.altar.name=Altar
+multiblocktweaker.machine.arcane_assembler.name=Arcane Assembler
+item.contenttweaker.aluminium_item_casing.name=Aluminium Item Casing
+item.contenttweaker.superconducting_wire_insulation_base.name=Superconducting Wire Insulation Base
+tile.contenttweaker.lq_steel_casing.name=Low Quality Steel Casing
