--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -82,8 +82,9 @@ material.kaptonk=Kapton-K
 material.awakened_draconium=Awakened Draconium
 material.chaos=Chaos
 material.highly_strained_polyethylene=Highly Strained Polyethylene
-
-
+material.high_density_polyethylene=High Density Polyethylene
+material.cross_linked_polyethylene=Cross Linked Polyethylene
+material.low_quality_steel=Low Quality Steel
 
 
 
