--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1504,3 +1504,8 @@ item.contenttweaker.aluminium_item_casing.name=Aluminium Item Casing
 item.contenttweaker.superconducting_wire_insulation_base.name=Superconducting Wire Insulation Base
 tile.contenttweaker.lq_steel_casing.name=Low Quality Steel Casing
 multiblocktweaker.machine.coal_burner_generator.name=Coal Burner Generator
+multiblocktweaker.machine.solar_thermal_concentrator.name=Solar Thermal Concentrator
+recipemap.solar_thermal_concentrator.name=Solar Thermal Concentration
+recipemap.coal_burner_generator.name=Coal Burner Generator
+multiblocktweaker.machine.coal_burner_generator.name=Coal Burner Generator
+fluid.sulfur_carbon_mixture=Sulfur Carbon Mixture
