--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -85,7 +85,8 @@ material.highly_strained_polyethylene=Highly Strained Polyethylene
 material.high_density_polyethylene=High Density Polyethylene
 material.cross_linked_polyethylene=Cross Linked Polyethylene
 material.low_quality_steel=Low Quality Steel
-
+material.gadolinite=Gadolinite
+material.xenotime=Xenotime
  
 
 
