--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1527,3 +1527,18 @@ fluid.gadolinite_leach_solution=Gadolinite Leach Solution
 item.contenttweaker.air_handling_unit.name=Air Handling Unit
 multiblocktweaker.machine.textile_factory.name=Textile Factory
 recipemap.textile_factory.name=Textile Factory
+tile.contenttweaker.machine_bronze_plated_bricks.name=Bronze Plated Brick Machine Casing
+item.contenttweaker.propellent_tank.name=Propellent Tank
+item.contenttweaker.fuel_tank.name=Fuel Tank
+item.contenttweaker.oxidizer_tank.name=Oxidizer Tank
+item.contenttweaker.rocket_combustion_chamber.name=Rocket Combustion Chamber
+item.contenttweaker.injector.name=Injector
+item.contenttweaker.nozzle.name=Nozzle
+tile.contenttweaker.t1_rocket_engine.name=T1 Rocket Engine
+tile.contenttweaker.rocket_thruster.name=Rocket Thruster
+tile.contenttweaker.guidance_system.name=Guidance System
+tile.contenttweaker.stabilization_fin.name=Stabilization Fin
+tile.contenttweaker.protective_outer_wall.name=Protective Outer Wall
+tile.contenttweaker.rocket_equipment.name=Rocket Equipment
+multiblocktweaker.machine.rocket_one.name=Rocket T1
+recipemap.rocket_one.name=Rocket T1
