--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1038,7 +1038,7 @@ metaitem.bisphenolbdust.name=Bisphenol B Dust
 metaitem.titaniumtetrachloridedust.name=Titanium Tetrachloride Dust
 metaitem.graphiteuraniummixturedust.name=Graphite Uranium Mixture Dust
 metaitem.unprocessedborondust.name=Unprocessed Boron Dust
-metaitem.distilledmonazitedust.name=Diluted Monazite Dust
+metaitem.distilledmonazitedust.name=Distilled Monazite Dust
 metaitem.radioactivesludge.name=Radioactive Sludge
 metaitem.monazitebasedpulp.name=Monazite Based Pulp
 metaitem.monazitefilteredpulp.name=Monazite Filtered Pulp
