--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1542,3 +1542,4 @@ tile.contenttweaker.protective_outer_wall.name=Protective Outer Wall
 tile.contenttweaker.rocket_equipment.name=Rocket Equipment
 multiblocktweaker.machine.rocket_one.name=Rocket T1
 recipemap.rocket_one.name=Rocket T1
+fluid.refined_glue_mixture=Refined Glue Mixture
