--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1543,3 +1543,4 @@ tile.contenttweaker.rocket_equipment.name=Rocket Equipment
 multiblocktweaker.machine.rocket_one.name=Rocket T1
 recipemap.rocket_one.name=Rocket T1
 fluid.refined_glue_mixture=Refined Glue Mixture
+fluid.gluey_residues=Gluey Residues
