--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1546,3 +1546,26 @@ fluid.refined_glue_mixture=Refined Glue Mixture
 fluid.gluey_residues=Gluey Residues
 metaitem.magnesiumtetrachloride.name=Magnesium tetrachloride
 item.contenttweaker.sputtered_sapphire_substrate.name=Sputtered Sapphire Substrate
+item.contenttweaker.propellant_tank.name=Propellant Tank
+item.contenttweaker.uhpic_base.name=UHPIC Base
+item.contenttweaker.uhpic_base_wafer.name=UHPIC Base Wafer
+item.contenttweaker.wired_substrate_wafer.name=Wired Substrate Wafer
+item.contenttweaker.superconductor_coated_substrate_wafer.name=Superconductor Coated Substrate Wafer
+item.contenttweaker.engraved_barium_titanate_substrate_wafer.name=Engraved Titanate Substrate Wafer
+item.contenttweaker.barium_titanate_substrate_wafer.name=Titanate Substrate Wafer
+item.contenttweaker.uhpic_lithography_mask.name=UHPIC Lithography Mask
+item.contenttweaker.lithography_base_mask.name=Lithography Base Mask
+item.contenttweaker.barium_titanate_boule.name=Barium Titanate Boule
+item.contenttweaker.barium_titanate_seed_crystal.name=Barium Titanate Seed Crystal
+item.contenttweaker.pic_lithography_mask.name=PIC Lithography Mask
+item.contenttweaker.single_josephson_junction.name=Single Josephson Junction
+item.contenttweaker.manufactured_superconductor_circuit.name=Manufactured Superconductor Circuit
+item.contenttweaker.hadamard_gate.name=Hamad Gate
+item.contenttweaker.pauli_x_gate.name=Pauli X Gate
+item.contenttweaker.pauli_y_gate.name=Pauli Y Gate
+item.contenttweaker.pauli_z_gate.name=Pauli Z Gate
+devtech.machine.rotary_evaporator.lv.name=Advanced Rotary Evaporator II
+devtech.machine.rotary_evaporator.mv.name=Advanced Rotary Evaporator II
+devtech.machine.rotary_evaporator.hv.name=Advanced Rotary Evaporator II
+devtech.machine.rotary_evaporator.ev.name=Advanced Rotary Evaporator III
+devtech.machine.rotary_evaporator.iv.name=Elite Rotary Evaporator 
