Fix Electron Beam Unit Lang

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1564,8 +1564,8 @@ item.contenttweaker.hadamard_gate.name=Hamad Gate
 item.contenttweaker.pauli_x_gate.name=Pauli X Gate
 item.contenttweaker.pauli_y_gate.name=Pauli Y Gate
 item.contenttweaker.pauli_z_gate.name=Pauli Z Gate
-devtech.machine.rotary_evaporator.lv.name=Advanced Rotary Evaporator II
-devtech.machine.rotary_evaporator.mv.name=Advanced Rotary Evaporator II
-devtech.machine.rotary_evaporator.hv.name=Advanced Rotary Evaporator II
-devtech.machine.rotary_evaporator.ev.name=Advanced Rotary Evaporator III
-devtech.machine.rotary_evaporator.iv.name=Elite Rotary Evaporator 
+devtech.machine.electron_beam.lv.name=Basic Electron Unit 
+devtech.machine.electron_beam.mv.name=Advanced Electron Unit I
+devtech.machine.electron_beam.hv.name=Advanced Electron Unit II
+devtech.machine.electron_beam.ev.name=Advanced Electron Unit III
+devtech.machine.electron_beam.iv.name=Elite Electron Unit
