more items and localization

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1560,12 +1560,39 @@ item.contenttweaker.barium_titanate_seed_crystal.name=Barium Titanate Seed Cryst
 item.contenttweaker.pic_lithography_mask.name=PIC Lithography Mask
 item.contenttweaker.single_josephson_junction.name=Single Josephson Junction
 item.contenttweaker.manufactured_superconductor_circuit.name=Manufactured Superconductor Circuit
-item.contenttweaker.hadamard_gate.name=Hamad Gate
-item.contenttweaker.pauli_x_gate.name=Pauli X Gate
-item.contenttweaker.pauli_y_gate.name=Pauli Y Gate
-item.contenttweaker.pauli_z_gate.name=Pauli Z Gate
 devtech.machine.electron_beam.lv.name=Basic Electron Unit 
-devtech.machine.electron_beam.mv.name=Advanced Electron Unit I
+devtech.machine.electron_beam.mv.name=Advanced Electron Unit 
 devtech.machine.electron_beam.hv.name=Advanced Electron Unit II
 devtech.machine.electron_beam.ev.name=Advanced Electron Unit III
 devtech.machine.electron_beam.iv.name=Elite Electron Unit
+multiblocktweaker.machine.manufactory.name=Manufactory
+recipemap.manufactory.name=Manufactory
+item.contenttweaker.raw_power_ic_wafer.name=Raw Power IC Wafer
+item.contenttweaker.engraved_power_ic_wafer.name=Engraved Power IC Wafer
+item.contenttweaker.ram_lithography_mask.name=Ram Lithography Mask
+item.contenttweaker.engraved_ram_wafer.name=Engraved Ram Wafer
+item.contenttweaker.raw_ram_wafer.name=Raw Ram Wafer
+item.contenttweaker.engraved_cpu_wafer.name=Engraved CPU Wafer
+item.contenttweaker.raw_cpu_wafer.name=Raw CPU Wafer
+item.contenttweaker.cpu_lithography_mask.name=CPU Lithography Mask
+item.contenttweaker.lpic_lithography_mask.name=Low-Power IC Lithography Mask
+fluid.two_butene=2-Butene
+fluid.two_butanol_solution=2-Butanol Solution
+fluid.treated_waste_water=Treated Waste Water
+fluid.very_hot_nitrogen=Very Hot Nitrogen
+fluid.silicon_carbide=Silicon Carbide
+fluid.butanone=Butanone
+fluid.sulfuric_acid_solution=Sulfuric Acid Solution
+fluid.silicontetrachloride=Silicon Tetrachloride
+fluid.silicon_carbide_vapor=Silicon Carbide Vapor
+fluid.two_butanol=2-Butanol
+metaitem.excited_roughen_mithril_dust.name=Excited Roughen Mithril Dust
+metaitem.cobalt_60_dust.name=Cobalt-60 Dust
+metaitem.white_phosporus.name=White Phosphorus Dust
+metaitem.phosphorus_pentoxide.name=Phosphorus Pentoxide Dust
+devtech.machine.ion_implanter.lv.name=Basic Ion Implanter 
+devtech.machine.ion_implanter.mv.name=Advanced Ion Implanter  
+devtech.machine.ion_implanter.hv.name=Advanced Ion Implanter  II
+devtech.machine.ion_implanter.ev.name=Advanced Ion Implanter  III
+devtech.machine.ion_implanter.iv.name=Elite Ion Implanter 
+devtech.machine.ion_implanter.luv.name=Elite Ion Implanter II
