--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1597,3 +1597,8 @@ devtech.machine.ion_implanter.ev.name=Advanced Ion Implanter  III
 devtech.machine.ion_implanter.iv.name=Elite Ion Implanter 
 devtech.machine.ion_implanter.luv.name=Elite Ion Implanter II
 tile.contenttweaker.naquadah_deposit_block.name=Naquadah Deposit Block
+metaitem.floated_andesite.name=Floated Andesite
+item.contenttweaker.parachute.name=Parachute
+item.contenttweaker.rebreather.name=Rebreather
+item.contenttweaker.oxygen_mask.name=Oxygen Mask
+item.contenttweaker.moon.name=Moon
