--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1602,3 +1602,12 @@ item.contenttweaker.parachute.name=Parachute
 item.contenttweaker.rebreather.name=Rebreather
 item.contenttweaker.oxygen_mask.name=Oxygen Mask
 item.contenttweaker.moon.name=Moon
+fluid.andesite_slurry=Andesite Slurry
+fluid.muddy_andesite_slurry=Muddy Andesite Slurry
+fluid.purified_andesite_slurry=Purified Andesite Slurry
+metaitem.digested_andesite.name=Digested Andesite Pulp
+fluid.andesite_leach_slurry=Andesite Leach Slurry
+fluid.hot_treated_wastewater=Hot Treated Wastewater
+fluid.trichlorosilane=Trichlorosilane
+fluid.hydrogen_chloride=Hydrogen Chloride
+fluid.iron_chloride_solution=Iron Chloride Solution
