--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1613,4 +1613,9 @@ fluid.hydrogen_chloride=Hydrogen Chloride
 fluid.iron_chloride_solution=Iron Chloride Solution
 multiblocktweaker.machine.pvd_unit.name=PVD Unit
 recipemap.pvd_unit.name=Plasma Vapor Deposition
-
+item.contenttweaker.twilight_forest.name=Twilight Forest
+item.contenttweaker.overworld.name=Overworld
+item.contenttweaker.aether.name=Aether
+item.contenttweaker.beneath.name=Beneath
+item.contenttweaker.end.name=End
+item.contenttweaker.nether.name=Nether
